3.0915:
 - Fix: Reduce the wild resource fluctuations during planet ticking.
 - Mod: Evein plans get an extra 5 days start time for building.
 - Add: Lacuna promotions.
 - Add: Orbits as BHG targets.
 - UI : Add build-boost-from-happy to happy popup.
 - Add: Fingerprinting browsers.
 - UI : Essentia panel redone.

3.0914:
 - UI : Evein draining re-added.
 - Fix: Effective level could be too high.
 - Fix: AI have a better chance to train a spy.
 - Mod: Subsidising buildings totals up more consistently.
 - Mod: Boost RPCs can take an optional weeks parameter.
 - Fix: Building counts were being returned wrong when building new buildings.

3.0913:
 - Add: Insurrect Value & SRCS happiness cost added to PCC output.
 - UI : Fix screen scrolling.
 - UI : Automatically load new captcha on failure (thanks, vortigon)
 - UI : New buildings have level visible immediately if user wants levels always displayed.
 - Mod: Limit shipyards to 30 days' queue.
 - Add: Constructing added to resource bar.
 - UI : Stop the "Trade Ministry is offline" message when repairing TM
 - UI : Added self-destruct button back.
 - Fix: Modify sanitize to do initialize of stored values last.
 - UI : New buildings will get level showing if user has asked for it.
 - UI : Fix announcement window for users as logging in.
 - UI : Fix planet jumping from links

3.0912:
 - Fix: get_fleet_for returns berth appropriate ships.
 - Fix: embassy stash could be exploited.
 - Fix: trade ministry's supply chain tab now works after selecting ship tab.
 - Add: build_ships API to automatically spread out ship building across multiple yards.
 - Add: per-colony notes in PCC
 - Fix: Oracles now work even during colonisation (60-second timer).
 - Fix: Starter Zone limit enforced.
 - Mod: Warehouses no longer use affinities or storage boosts.
 - Add: RPC counter always displayed in UI
 - Fix: Can now change station owner to oneself (UI)
 - Add: homeworld highlighted and always at the top of the public profile